<resources>
    <string name="app_name">Beautician</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="nav_menu_1">Home </string>
    <string name="nav_menu_2">Logout </string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="app_in_maintenance">App is in maintenance</string>
    <string name="log_out">Log out</string>
    <string name="sure_to_log_out">Are you sure to log out</string>
    <string name="facebook_app_id">285406156235659</string>
    <string name="fb_login_protocol_scheme">fb285406156235659</string>
    <string name="google_map_key">AIzaSyBUzzFYshH6zu8VZD5Jjne8PAXBPPJFCTI</string>
    <string name="no_network_error">No Internet Connection</string>
    <string name="default_error">Server Error</string>
    <string name="no_record_found">No Record Found</string>
    <string name="validation_failed">Validation Failed</string>
    <string name="oops_some_error_occured">Oops some error occurred!</string>
    <string name="email_id_not_exist">Email id not exist.</string>
    <string name="user_id_not_exist">User id is not exists</string>
    <string name="something_went_wrong">Something went wrong.Please try again!</string>
    <string name="invalid_credentials">Either email or password is incorrect</string>
    <string name="invalid_old_password">Old password is incorrect</string>
    <string name="dialog_title">Info</string>
    <string name="str_no_gps_connection">No GPS connection. Make sure that gps is turned on, then try again.</string>
    <string name="select_image_from">Please select image from</string>
    <string name="from_gallery">From gallery</string>
    <string name="from_camera">From camera</string>
    <string name="app_exit_msg">Please click BACK again to exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity">Activity</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="you_do_not_have_any_notification_yet">You do not have any notification yet. </string>
    <string name="you_re_up_to_date">You\'re up to date!</string>
    <string name="check_back_here_to_learn">Check back here to learn about brand new feature added to your account.</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="go_here">Go here</string>
    <string name="manage_your_notification">to manage your notification settings.</string>
    <string name="my_notification_settings">My Notification Settings</string>
    <string name="choose_which_types_of_noti">Choose which types of notiﬁcations yor’d like to receive. you can control mobile app notiﬁcations under your device notiﬁcation settings.</string>
    <string name="appointment_notifications">Appointment notifications</string>
    <string name="choose_which_types_of_notifications_yor">Choose which types of notifications yor’d like to receive.</string>
    <string name="learn_more_about_notification">Learn more about notiﬁcations.</string>
    <string name="notify_me_about">Notify me about</string>
    <string name="appointment_booked_with_all">Appointment booked with all staff</string>
    <string name="select_location">Select Locations</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="zero_locations">0 locations</string>
    <string name="my_profile">My profile</string>
    <string name="analytics">Analytics</string>
    <string name="staff">Staff</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="inventory">Inventory</string>
    <string name="setup">Setup</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu">Menu</string>
    <string name="download_pdf">Download PDF</string>
    <string name="download_excel">Download Excel</string>
    <string name="download_csv">Download CSV</string>
    <string name="manage_service_order">Manage Service Order</string>
    <string name="delete_category">Delete Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_new_service">Add New Service</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="edit_service">Edit Service</string>
    <string name="service_name">Service name</string>
    <string name="treatment_type">Treatment type</string>
    <string name="choose_the_most_relevant_type">Choose the most relevant type, for internal\nreference and not currently visible to clients</string>
    <string name="prices">Prices</string>
    <string name="duration">Duration</string>
    <string name="price_type">Price type</string>
    <string name="retail_price">Retail price</string>
    <string name="special_price_optional">Special price (optional)</string>
    <string name="pricing_name_optional">Pricing name (optional)</string>
    <string name="add_another_pricing_option">Add another pricing option</string>
    <string name="other_options">Other Options</string>
    <string name="settings">Settings</string>
    <string name="online_booking">Online Booking</string>
    <string name="delete">Delete</string>
    <string name="new_pricing_option">New pricing option</string>
    <string name="pricing_price_optional">Pricing price (optional)</string>
    <string name="select_staff_who_perform">select satﬀ who perform this service.</string>
    <string name="allow_clients_to_book_this">Allow clients to book this service online, switch oﬀ to hide this service frome your online bookings menu.</string>
    <string name="service_description">Service Desription</string>
    <string name="service_available_for">Service available for</string>
    <string name="enable_online_bookings">Enable online bookings</string>
    <string name="extra_time">Extra time</string>
    <string name="extra_time_type">Extra time type</string>
    <string name="blocktime_will_build_in_between">blocktime will build-in between appointments e.g 10mins ro tidy up or take a break. processing time is used to allow formuias to develop, meaning you are free to take other booking during this time.</string>
    <string name="tax">Tax</string>
    <string name="set_tax_rate_for">Set tax rate for this service</string>
    <string name="tax_include_in_price">Tax (included in price)</string>
    <string name="voucher">Voucher</string>
    <string name="voucher_exprity_period">Voucher exprite period</string>
    <string name="enable_voucher_sales">Enable voucher sales</string>
    <string name="commission">Commission</string>
    <string name="enable_commission">Enable commission</string>
    <string name="calculate_sat_commissions">Calculate staff commissions when this service is sold</string>
    <string name="continues">Continue</string>
    <string name="service_menu">Service Menu</string>
    <string name="accessing_your_location_will">Accessing your location will provide you nearest\nsaloon around.\nThis activity is completely private and safe</string>
    <string name="staff_members">Staff Members</string>
    <string name="staff_members_sub_heading">Add or remove team members and control their user access level</string>
    <string name="you_re_all_set">You’re All Set!</string>
    <string name="go_to_calendar">Go to calendar</string>
    <string name="search_by_name_e_mail">Search by name, e-mail or mobile number</string>
    <string name="clients">Clients</string>
    <string name="manage_clients">Manage Clients</string>
    <string name="import_clients">Import Clients</string>
    <string name="new_client">New Client</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile">Mobile</string>
    <string name="telephone">Telephone</string>
    <string name="send_notifications">Send notification by</string>
    <string name="email">Email</string>
    <string name="preferred_language">Preferred language</string>
    <string name="client_notes">Client Notes</string>
    <string name="display_on_all_bookings">Display on all bookings</string>
    <string name="accepts_marketing_notifications">Accepts marketing notifications</string>
    <string name="personal_info">Personal info</string>
    <string name="upload_profile_photo">Upload profile photo</string>
    <string name="personal_details">Personal Details</string>
    <string name="set_your_name_and_contact">Set your name and contact information,the\nemail address entered here is used for your\nlogin access</string>
    <string name="change_password">Change Password</string>
    <string name="to_make_an_update_enter_your">To make an update, enter your existing password followed by a new one. if you don\'t know your existing password, you can logout and use the Reset Password link on the Log in page.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="verify_password">Verify password</string>
    <string name="receive_notification_about">Receive notification about important activity in your account</string>
    <string name="gender">Gender</string>
    <string name="referral_source">Referral source</string>
    <string name="birthday">Birthday</string>
    <string name="select_month">Select month</string>
    <string name="select_day">Select day</string>
    <string name="select_year">Select year</string>
    <string name="address_details">Address details</string>
    <string name="marketing_notifications">Marketing notifications</string>
    <string name="total_sales">Total Sales</string>
    <string name="outstanding">Outstanding</string>
    <string name="all_bookings">All bookings</string>
    <string name="no_shows">No Shows</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="appointments">Appointments</string>
    <string name="products">Products</string>
    <string name="invoices">Invoices</string>
    <string name="block">Bloack</string>
    <string name="marge">Marge</string>
    <string name="edit">Edit</string>
    <string name="new_appointment">New appointment</string>
    <string name="no_sales_history">No Sales History</string>
    <string name="use_the_checkout_feature">Use the checkout feature to create a new sale for this client</string>
    <string name="client_profile">Client Profile</string>
    <string name="address">Address</string>
    <string name="suburb">Suburb</string>
    <string name="zip_post_code">Zip / Post Code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="add_new_products">Add New Products</string>
    <string name="service_commission">Service Commission</string>
    <string name="percentage_symbol">%</string>
    <string name="cancel">Cancel</string>
    <string name="log_in_for_professionals">Log in for professionals</string>
    <string name="access_your_partner_account">Access your partner account to manage your\nbusiness</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_a_partner_account">Don\'t have a partner account?</string>
    <string name="sign_up_your_business">Sign up your business</string>
    <string name="or">OR</string>
    <string name="or_connect_with">Connect with social account</string>
</resources>