<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragLogin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="@dimen/_15sdp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold_font"
                android:text="@string/log_in_for_professionals"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_size_x_large"
                />

            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular_font"
                android:text="@string/access_your_partner_account"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_size_small"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <ImageView
                android:src="@mipmap/beautician_app_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_96sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/CounterText"
                app:hintTextAppearance="@style/HintText"
                >
                <EditText
                    android:id="@+id/frag_login_editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/regular_font"
                    android:textColorHint="@color/colorSecondaryText"
                    android:imeOptions="actionNext"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:paddingBottom="@dimen/edit_bottom_padding"
                    android:textSize="@dimen/font_size_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/CounterText"
                app:hintTextAppearance="@style/HintText"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorBlack"
                android:layout_marginTop="@dimen/_10sdp"
                >
                <EditText
                    android:id="@+id/frag_login_editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/regular_font"
                    android:imeOptions="actionDone"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorSecondaryText"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:paddingBottom="@dimen/edit_bottom_padding"
                    android:textSize="@dimen/font_size_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/frag_login_txtForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular_font"
                android:text="@string/forgot_password"
                android:textAlignment="viewStart"
                android:textColor="@color/colorSkyBlue"
                android:textSize="@dimen/font_size_small"
                android:layout_marginTop="@dimen/_5sdp"
                />


            <TextView
                android:id="@+id/frag_login_txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/ic_save_btn_bg"
                android:padding="@dimen/_10sdp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular_font"
                android:text="@string/don_t_have_a_partner_account"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_small"
                android:layout_marginTop="@dimen/_20sdp"
                />
            <TextView
                android:id="@+id/frag_login_txtSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular_font"
                android:text="@string/sign_up_your_business"
                android:textAlignment="center"
                android:textColor="@color/colorSkyBlue"
                android:textSize="@dimen/font_size_small"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_xx_large"
                android:fontFamily="@font/regular_font"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_connect_with"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:textSize="@dimen/thin_text"
                android:fontFamily="@font/regular_font"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                >

                <ImageView
                    android:id="@+id/frag_login_imgFB"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@mipmap/img_facebook_icon"
                    />

                <ImageView
                    android:id="@+id/frag_login_imgGmail"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@mipmap/img_gmail_icon"
                    android:layout_marginStart="@dimen/_20sdp"
                    />


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>