<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_no_internet_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/dialog_img_no_internet"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/no_network_icon" />

    <TextView
        android:id="@+id/dialog_txt_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_btn_cancel"
            style="?attr/borderlessButtonStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:background="@drawable/blue_rect_solid_round"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dialog_btn_retry"
            style="?attr/borderlessButtonStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/blue_rect_solid_round"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>